--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -25,4 +25,4 @@ web:
     path: F:/upload/
 alipay:
   callback:
-    url: http://mi5eb4.natappfree.cc/order/alipay_callback
+    url: http://9rwfa6.natappfree.cc/order/alipay_callback
